tests/snapshots/snapshot_errors__snapshot_error_banned_let.snap
---
source: tests/snapshot_errors.rs
assertion_line: 39
expression: output
---
[31mError:[0m banned keyword 'let': Use `const` - all bindings are immutable in ZenScript
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_let.zs:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31ml[0m[31me[0m[31mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m4[0m[38;5;249m2[0m
 [38;5;240m  │[0m [31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m  [31m╰[0m[31m─[0m[31m─[0m[31m─[0m banned in ZenScript
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use `const` - all bindings are immutable in ZenScript
[38;5;246m───╯[0m
