tests/snapshots/snapshot_errors__snapshot_error_banned_null.snap
---
source: tests/snapshot_errors.rs
assertion_line: 51
expression: output
---
[31mError:[0m banned keyword 'null': Use `Option<T>` with `Some`/`None` instead of null
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m banned_null.zs:1:11 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31mn[0m[31mu[0m[31ml[0m[31ml[0m
 [38;5;240m  │[0m           [31m─[0m[31m─[0m[31m┬[0m[31m─[0m  
 [38;5;240m  │[0m             [31m╰[0m[31m─[0m[31m─[0m[31m─[0m banned in ZenScript
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use `Option<T>` with `Some`/`None` instead of null
[38;5;246m───╯[0m
