tests/snapshots/snapshot_errors__snapshot_error_member_access_on_non_record_type.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E021] Error:[0m cannot access `.gibberish` on type `(number)`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[31mi[0m[31mt[0m[31me[0m[31mm[0m[31ms[0m[31m.[0m[31mg[0m[31mi[0m[31mb[0m[31mb[0m[31me[0m[31mr[0m[31mi[0m[31ms[0m[31mh[0m
 [38;5;240m  │[0m   [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m          [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m this type does not support member access
[38;5;246m───╯[0m
[31m[E001] Error:[0m function `check`: expected return type `number`, found `unknown`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:2:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[31mi[0m[31mt[0m[31me[0m[31mm[0m[31ms[0m[31m.[0m[31mg[0m[31mi[0m[31mb[0m[31mb[0m[31me[0m[31mr[0m[31mi[0m[31ms[0m[31mh[0m
 [38;5;240m  │[0m   [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m           [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m expected `number`
[38;5;246m───╯[0m
[33m[W001] Warning:[0m unused variable `check`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mn[0m[33m [0m[33mc[0m[33mh[0m[33me[0m[33mc[0m[33mk[0m[33m([0m[33mi[0m[33mt[0m[33me[0m[33mm[0m[33ms[0m[33m:[0m[33m [0m[33m[[0m[33mn[0m[33mu[0m[33mm[0m[33mb[0m[33me[0m[33mr[0m[33m][0m[33m)[0m[33m [0m[33m-[0m[33m>[0m[33m [0m[33mn[0m[33mu[0m[33mm[0m[33mb[0m[33me[0m[33mr[0m[33m [0m[33m{[0m
 [38;5;240m  ┆[0m [33m┆[0m   
 [38;5;246m3 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m  │[0m [33m│[0m      
 [38;5;240m  │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m  │[0m     
 [38;5;240m  │[0m     [38;5;115mHelp[0m: prefix with underscore `_check` to suppress
[38;5;246m───╯[0m
