tests/snapshots/snapshot_errors__snapshot_error_string_concat.snap
---
source: tests/snapshot_errors.rs
assertion_line: 98
expression: output
---
[33m[W002] Warning:[0m use template literal instead of `+` for string concatenation
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.zs:1:12 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mc[0m[38;5;249mo[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m_[0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[33m"[0m[33ma[0m[33m"[0m[33m [0m[33m+[0m[33m [0m[33m"[0m[33mb[0m[33m"[0m
 [38;5;240m  │[0m            [33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m┬[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m  
 [38;5;240m  │[0m                [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m string concat with +
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: Use `${a}${b}` instead
[38;5;246m───╯[0m
