tests/snapshots/snapshot_errors__snapshot_error_trait_method_param_type_mismatch.snap
---
source: tests/snapshot_errors.rs
expression: output
---
[31m[E048] Error:[0m parameter 1 of method `create` has type `string` but trait `Repo` requires `number`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:9:26 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m9 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mf[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249mc[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249m([0m[38;5;249ms[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mf[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mp[0m[38;5;249mu[0m[38;5;249mt[0m[38;5;249m:[0m[38;5;249m [0m[31ms[0m[31mt[0m[31mr[0m[31mi[0m[31mn[0m[31mg[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m>[0m[38;5;249m [0m[38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m                          [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                             [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m expected `number`
 [38;5;240m  │[0m 
 [38;5;240m  │[0m [38;5;115mHelp[0m: change to match trait `Repo`
[38;5;246m───╯[0m
[33m[W001] Warning:[0m unused variable `create`
    [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m test.fl:8:1 [38;5;246m][0m
    [38;5;246m│[0m
 [38;5;246m 8 │[0m [33m╭[0m[33m─[0m[33m▶[0m[33m [0m[33mf[0m[33mo[0m[33mr[0m[33m [0m[33mM[0m[33my[0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m:[0m[33m [0m[33mR[0m[33me[0m[33mp[0m[33mo[0m[33m [0m[33m{[0m
 [38;5;240m   ┆[0m [33m┆[0m   
 [38;5;246m12 │[0m [33m├[0m[33m─[0m[33m▶[0m[33m [0m[33m}[0m
 [38;5;240m   │[0m [33m│[0m       
 [38;5;240m   │[0m [33m╰[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m[33m─[0m defined but never used
 [38;5;240m   │[0m     
 [38;5;240m   │[0m     [38;5;115mHelp[0m: prefix with underscore `_create` to suppress
[38;5;246m────╯[0m
